# csgo-gsi

./: .build.yml  Cargo.toml  LICENSE  README.md
examples/: rhai.rs  verbose.rs
src/: config.rs  error.rs  install_dir.rs  lib.rs  server.rs
src/update/: map.rs  mod.rs  player.rs  round.rs
