[package]
name = "csgo-gsi"
version = "0.1.0"
authors = ["Melody Horn <melody@boringcactus.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.115", features = ["derive"] }
fehler = "1.0.0"
vdf-serde = "0.3.0"
gotham = "0.5.0"
gotham_derive = "0.5.0"
serde_json = "1.0.57"
tokio = { version = "0.2.5", features = ["full"] }

[target.'cfg(windows)'.dependencies]
registry = "1.0.0-alpha.4"
