[package]
name = "csgo-gsi"
version = "0.2.0"
authors = ["Melody Horn <melody@boringcactus.com>"]
edition = "2018"
description = "rust library for CS:GO's Game State Integration API"
documentation = "https://docs.rs/csgo-gsi"
readme = "README.md"
homepage = "https://sr.ht/~boringcactus/csgo-gsi/"
repository = "https://git.sr.ht/~boringcactus/csgo-gsi"
license-file = "LICENSE"
keywords = ["csgo", "valve"]
categories = ["api-bindings"]

[badges]
maintenance = { status = "experimental" }

[dependencies]
serde = { version = "1.0.115", features = ["derive"] }
fehler = "1.0.0"
vdf-serde = "0.3.0"
gotham = "0.5.0"
gotham_derive = "0.5.0"
serde_json = "1.0.57"
tokio = { version = "0.2.5", features = ["full"] }

[target.'cfg(windows)'.dependencies]
registry = "1.0.0-alpha.4"

[dev-dependencies]
version-sync = "0.9.1"
